--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Gerador de QR Code</title>
+<link rel="icon" href="https://dl/scl/fi/r2a1ld2xtkxkdfc8dlsr5/tool.png?rlkey=schd5t3as8tzf71ld5dj07972&st=p6pfvznp&dl=0" type="image/jpg">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 </head>
@@ -480,4 +481,5 @@ right:0;
     </script>
 </body>
 </html>
+
 
